--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
         pwd        
         dotnet publish -c Release -o ../../release --nologo
         
-    # changes the base-tag in index.html from '/' to 'wasm-test-2' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to wasm-test-2
-      run: sed -i 's/<base href="\/" \/>/<base href="\/wasm-test-2\/" \/>/g' release/wwwroot/index.html
+    # changes the base-tag in index.html from '/' to 'BattleshipClone' to match GitHub Pages repository subdirectory
+    - name: Change base-tag in index.html from / to BattleshipClone
+      run: sed -i 's/<base href="\/" \/>/<base href="\/BattleshipClone\/" \/>/g' release/wwwroot/index.html
     
     # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
