--- a/Battleship/BlazorApp/BlazorApp.csproj
+++ b/Battleship/BlazorApp/BlazorApp.csproj
@@ -19,4 +19,10 @@
     <Folder Include="wwwroot\images" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ServiceWorker Include="wwwroot\service-worker.js">
+      <PublishedContent>wwwroot/service-worker.published.js</PublishedContent>
+    </ServiceWorker>
+  </ItemGroup>
+
 </Project>
