--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
         pwd        
         dotnet publish -c Release -o ../../release --nologo
         
+    - name: git log
+      run: |
+        git --no-pager log --oneline
     # changes the base-tag in index.html from '/' to 'BattleshipClone' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to BattleshipClone
       run: sed -i 's/<base href="\/" \/>/<base href="\/BattleshipClone\/" \/>/g' release/wwwroot/index.html
