--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,9 @@ jobs:
         
     - name: git log
       run: |
-        git --no-pager log --oneline
+        git_hash=$(git --no-pager log -1 --oneline --format="%H")
+        git_hash_8=${git_hash:0:8}
+        python3 ./dev_tools.py --hash "$git_hash_8"
     # changes the base-tag in index.html from '/' to 'BattleshipClone' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to BattleshipClone
       run: sed -i 's/<base href="\/" \/>/<base href="\/BattleshipClone\/" \/>/g' release/wwwroot/index.html
