--- a/Battleship/OpenTKProj/OpenTKProj.csproj
+++ b/Battleship/OpenTKProj/OpenTKProj.csproj
@@ -9,7 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="glfw" Version="3.3.7" />
+      <PackageReference Include="glfw" Version="3.3.1" />
+      <PackageReference Include="glfw-net" Version="3.3.1" />
+      <PackageReference Include="OpenGL.Net" Version="0.8.4" />
       <PackageReference Include="OpenTK" Version="4.7.2" />
     </ItemGroup>
 
