[save] test monogame vs sfml draw performance

--- a/Battleship/MonoGame/MonoGame.csproj
+++ b/Battleship/MonoGame/MonoGame.csproj
@@ -12,6 +12,9 @@
   <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
+    <None Update="Content\builtContent\PressStart2pFont.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
